fixed bootstrap modal and navbar not collapsing issue, by removing bootstrap imports.

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(250, 203, 203, 0.87);
-  background-color: #a10c0c;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -60,7 +60,9 @@ h1 {
 h2 {
   color: rgb(89, 8, 165);
 }
-
+span{
+  font-weight: bold;
+}
 /*------------------- Nav Bar -------------------*/
 
 .nav-link:hover, 
@@ -91,8 +93,8 @@ h2 {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #f80202;
+    color: #6000a0;
+    background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
@@ -129,9 +131,6 @@ h2 {
 
 /*---------------------Exercise Form Component------------------------*/
 
-span{
-  font-weight: bold;
-}
 #saveWorkout{
   width: 90px;
   /* border: 3px solid rgb(24, 116, 255); */
@@ -171,12 +170,12 @@ span{
   min-width:350px;
   height:fit-content;
   min-height: 250px;
-  box-shadow: 0 5px 10px 0 rgba(106, 233, 21);
+  box-shadow: 0 5px 10px 0 rgb(106, 233, 21);
   /* border: 13px solid rgb(238, 240, 233); */
 }
 .exerciseDiv:hover{
   transform: translateY(5px);
-  box-shadow: 0px 10px 20px 2px rgb(195, 19, 248);
+  box-shadow: 0 5px 10px 0 rgb(180, 0, 235);
 }
 
 form, label{
@@ -309,21 +308,5 @@ button:focus-visible {
   border:none;
 }
 
-/*-------Default button settings----*/
-bttn {
-  border-radius: 10px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #da0404;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  width: 120px;
-}
-bttn:hover {
-  border-color: #646cff;
-}
 
  
